Implement all Methods and Classes up to API Version 6.7u3
Bump Version to 2.0
improve some Methods under the hood and generify these methods
implement some SOAP clients with different httpclient libraries, e.g. Apache HttpClient
  and find the best implementation at runtime

Signed-off-by: Stefan Dilk <stefan.dilk@freenet.ag>