@@ -32,14 +32,23 @@ package com.vmware.vim25.mo;
 
 import com.vmware.vim25.*;
 import com.vmware.vim25.mo.util.MorUtil;
+import com.vmware.vim25.ws.Argument;
 
 import java.rmi.RemoteException;
+import java.util.Arrays;
+import java.util.List;
 
 /**
- * The managed object class corresponding to the one defined in VI SDK API reference.
+ * The HostSystem managed object type provides access to a virtualization host platform.
+ *
+ * Invoking destroy on a HostSystem of standalone type throws a NotSupported fault.
+ * A standalone HostSystem can be destroyed only by invoking destroy on its parent ComputeResource.
+ * Invoking destroy on a failover host throws a DisallowedOperationOnFailoverHost fault.
+ * @see ClusterFailoverHostAdmissionControlPolicy
  *
  * @author Steve JIN (http://www.doublecloud.org)
- * @author Stefan Dilk
+ * @author Stefan Dilk <stefan.dilk@freenet.ag>
+ * @version 6.7.1
  */
 
 public class HostSystem extends ManagedEntity {
@@ -50,12 +59,35 @@ public class HostSystem extends ManagedEntity {
         super(sc, mor);
     }
 
+    public AnswerFileStatusResult getAnswerFileValidationResult() {
+        return (AnswerFileStatusResult) this.getCurrentProperty("answerFileValidationResult");
+    }
+
+    public AnswerFileStatusResult getAnswerFileValidationState() {
+        return (AnswerFileStatusResult) this.getCurrentProperty("answerFileValidationState");
+    }
+
     public HostCapability getCapability() {
         return (HostCapability) getCurrentProperty("capability");
     }
 
+    public ComplianceResult getComplianceCheckResult() {
+        return (ComplianceResult) this.getCurrentProperty("complianceCheckResult");
+    }
+
+    public HostSystemComplianceCheckState getComplianceCheckState() {
+        return (HostSystemComplianceCheckState) this.getCurrentProperty("complianceCheckState");
+    }
+
     public HostConfigInfo getConfig() {
         return (HostConfigInfo) getCurrentProperty("config");
+    }
+
+    public HostConfigManager getConfigManager() throws InvalidProperty, RuntimeFault, RemoteException {
+        if (configManager == null) {
+            configManager = (HostConfigManager) getCurrentProperty("configManager");
+        }
+        return configManager;
     }
 
     public Datastore[] getDatastores() throws InvalidProperty, RuntimeFault, RemoteException {
@@ -81,6 +113,18 @@ public class HostSystem extends ManagedEntity {
         return getNetworks("network");
     }
 
+    public ApplyHostProfileConfigurationSpec getPrecheckRemediationResult() {
+        return (ApplyHostProfileConfigurationSpec) this.getCurrentProperty("precheckRemediationResult");
+    }
+
+    public ApplyHostProfileConfigurationResult getRemediationResult() {
+        return (ApplyHostProfileConfigurationResult) this.getCurrentProperty("remediationResult");
+    }
+
+    public HostSystemRemediationState getRemediationState() {
+        return (HostSystemRemediationState) this.getCurrentProperty("remediationState");
+    }
+
     public HostRuntimeInfo getRuntime() {
         return (HostRuntimeInfo) getCurrentProperty("runtime");
     }
@@ -101,14 +145,27 @@ public class HostSystem extends ManagedEntity {
         return getVimService().acquireCimServicesTicket(getMOR());
     }
 
+    public void configureCryptoKey(final CryptoKeyId keyId) throws RuntimeFault, RemoteException {
+        final List<Argument> params = Arrays.asList(this.getSelfArgument(),
+                new Argument("keyId", CryptoKeyId.class, keyId));
+        this.getVimService().getWsc().invokeWithoutReturn("ConfigureCryptoKey", params);
+    }
+
     public Task disconnectHost() throws RuntimeFault, RemoteException {
         ManagedObjectReference mor = getVimService().disconnectHost_Task(getMOR());
         return new Task(getServerConnection(), mor);
     }
 
+    public void enableCrypto(final CryptoKeyPlain keyPlain) throws InvalidState, RuntimeFault, RemoteException {
+        final List<Argument> params = Arrays.asList(this.getSelfArgument(),
+                new Argument("keyPlain", CryptoKeyPlain.class, keyPlain));
+        this.getVimService().getWsc().invokeWithoutReturn("EnableCrypto", params);
+    }
+
     /**
      * @since SDK4.1
      */
+    @Deprecated(since = "6.0")
     public void enterLockdownMode() throws HostConfigFault, RuntimeFault, RemoteException {
         getVimService().enterLockdownMode(getMOR());
     }
@@ -124,13 +181,14 @@ public class HostSystem extends ManagedEntity {
      * @since SDK5.5
      */
     public Task enterMaintenanceMode(int timeout, boolean evacuatePoweredOffVms, HostMaintenanceSpec maintenanceSpec) throws Timedout, InvalidState, RuntimeFault, RemoteException {
-        ManagedObjectReference mor = getVimService().enterMaintenanceMode_Task(getMOR(), timeout, new Boolean(evacuatePoweredOffVms), maintenanceSpec);
+        ManagedObjectReference mor = getVimService().enterMaintenanceMode_Task(getMOR(), timeout, Boolean.valueOf(evacuatePoweredOffVms), maintenanceSpec);
         return new Task(getServerConnection(), mor);
     }
 
     /**
      * @since SDK4.1
      */
+    @Deprecated(since = "6.0")
     public void exitLockdownMode() throws HostConfigFault, RuntimeFault, RemoteException {
         getVimService().exitLockdownMode(getMOR());
     }
@@ -141,7 +199,7 @@ public class HostSystem extends ManagedEntity {
     }
 
     public Task powerDownHostToStandBy(int timeSec, boolean evacuatePoweredOffVms) throws RequestCanceled, HostPowerOpFailed, NotSupported, Timedout, InvalidState, RuntimeFault, RemoteException {
-        ManagedObjectReference mor = getVimService().powerDownHostToStandBy_Task(getMOR(), timeSec, new Boolean(evacuatePoweredOffVms));
+        ManagedObjectReference mor = getVimService().powerDownHostToStandBy_Task(getMOR(), timeSec, Boolean.valueOf(evacuatePoweredOffVms));
         return new Task(getServerConnection(), mor);
     }
 
@@ -150,8 +208,26 @@ public class HostSystem extends ManagedEntity {
         return new Task(getServerConnection(), mor);
     }
 
+    public void prepareCrypto() throws InvalidState, RuntimeFault, RemoteException {
+        this.getVimService().getWsc().invokeWithoutReturn("PrepareCrypto", this.getSingleSelfArgumentList());
+    }
+
     public HostConnectInfo queryHostConnectionInfo() throws RuntimeFault, RemoteException {
         return getVimService().queryHostConnectionInfo(getMOR());
+    }
+
+    @Deprecated(since = "2.5")
+    public long queryMemoryOverhead(long memorySize, int videoRamSize, int numVcpus) throws RuntimeFault, RemoteException {
+        return getVimService().queryMemoryOverhead(getMOR(), memorySize, new Integer(videoRamSize), numVcpus);
+    }
+
+    @Deprecated(since = "6.0")
+    public long queryMemoryOverheadEx(VirtualMachineConfigInfo vmConfigInfo) throws RuntimeFault, RemoteException {
+        return getVimService().queryMemoryOverheadEx(getMOR(), vmConfigInfo);
+    }
+
+    public String queryProductLockerLocation() throws HostConfigFault, RuntimeFault, RemoteException {
+        return this.getVimService().getWsc().invoke("QueryProductLockerLocation", this.getSingleSelfArgumentList(), String.class);
     }
 
     /**
@@ -159,21 +235,6 @@ public class HostSystem extends ManagedEntity {
      */
     public HostTpmAttestationReport queryTpmAttestationReport() throws RuntimeFault, RemoteException {
         return getVimService().queryTpmAttestationReport(getMOR());
-    }
-
-    /**
-     * @since SDK5.1
-     */
-    public void updateSystemSwapConfiguration(HostSystemSwapConfiguration sysSwapConfig) throws RuntimeFault, RemoteException {
-        getVimService().updateSystemSwapConfiguration(getMOR(), sysSwapConfig);
-    }
-
-    public long queryMemoryOverhead(long memorySize, int videoRamSize, int numVcpus) throws RuntimeFault, RemoteException {
-        return getVimService().queryMemoryOverhead(getMOR(), memorySize, new Integer(videoRamSize), numVcpus);
-    }
-
-    public long queryMemoryOverheadEx(VirtualMachineConfigInfo vmConfigInfo) throws RuntimeFault, RemoteException {
-        return getVimService().queryMemoryOverheadEx(getMOR(), vmConfigInfo);
     }
 
     public Task rebootHost(boolean force) throws InvalidState, RuntimeFault, RemoteException {
@@ -213,10 +274,6 @@ public class HostSystem extends ManagedEntity {
         getVimService().updateFlags(getMOR(), hfi);
     }
 
-    public void updateSystemResources(HostSystemResourceInfo resourceInfo) throws RuntimeFault, RemoteException {
-        getVimService().updateSystemResources(getMOR(), resourceInfo);
-    }
-
     /**
      * @since 4.0
      */
@@ -224,30 +281,64 @@ public class HostSystem extends ManagedEntity {
         getVimService().updateIpmi(getMOR(), ipmiInfo);
     }
 
-    private HostConfigManager getConfigManager() throws InvalidProperty, RuntimeFault, RemoteException {
-        if (configManager == null) {
-            configManager = (HostConfigManager) getCurrentProperty("configManager");
-        }
-        return configManager;
+    public Task updateProductLockerLocation(final String path) throws FileNotFound, HostConfigFault, InvalidArgument, RuntimeFault, TaskInProgress, RemoteException {
+        final List<Argument> params = Arrays.asList(this.getSelfArgument(),
+                new Argument("path", String.class, path));
+        final ManagedObjectReference mor = this.getVimService().getWsc().invoke("UpdateProductLockerLocation_Task", params, ManagedObjectReference.class);
+        return new Task(this.getServerConnection(), mor);
+    }
+
+    @Deprecated(since = "6.0")
+    public void updateSystemResources(HostSystemResourceInfo resourceInfo) throws RuntimeFault, RemoteException {
+        getVimService().updateSystemResources(getMOR(), resourceInfo);
+    }
+
+    /**
+     * @since SDK5.1
+     */
+    public void updateSystemSwapConfiguration(HostSystemSwapConfiguration sysSwapConfig) throws RuntimeFault, RemoteException {
+        getVimService().updateSystemSwapConfiguration(getMOR(), sysSwapConfig);
+    }
+
+    // Helper Methods for getting instances from ConfigManager
+    public HostLocalAccountManager getHostLocalAccountManager() throws InvalidProperty, RuntimeFault, RemoteException {
+        return new HostLocalAccountManager(getServerConnection(), getConfigManager().getAccountManager());
     }
 
     public OptionManager getOptionManager() throws InvalidProperty, RuntimeFault, RemoteException {
         return new OptionManager(getServerConnection(), getConfigManager().getAdvancedOption());
     }
 
+    public HostAuthenticationManager getHostAuthenticationManager() throws InvalidProperty, RuntimeFault, RemoteException {
+        return new HostAuthenticationManager(this.getServerConnection(), this.getConfigManager().getAuthenticationManager());
+    }
+
     public HostAutoStartManager getHostAutoStartManager() throws InvalidProperty, RuntimeFault, RemoteException {
         return new HostAutoStartManager(getServerConnection(), getConfigManager().getAutoStartManager());
     }
 
-    /**
-     * @since 6.0
-     */
-    public HostLocalAccountManager getHostLocalAccountManager() throws InvalidProperty, RuntimeFault, RemoteException {
-        return new HostLocalAccountManager(getServerConnection(), getConfigManager().getAccountManager());
-    }
-
     public HostBootDeviceSystem getHostBootDeviceSystem() throws InvalidProperty, RuntimeFault, RemoteException {
         return (HostBootDeviceSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getBootDeviceSystem());
+    }
+
+    public HostCacheConfigurationManager getHostCacheConfigurationManager() throws InvalidProperty, RuntimeFault, RemoteException {
+        return (HostCacheConfigurationManager) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getCacheConfigurationManager());
+    }
+
+    public HostCertificateManager getHostCertificateManager() throws InvalidProperty, RuntimeFault, RemoteException {
+        return new HostCertificateManager(getServerConnection(), getConfigManager().getCertificateManager());
+    }
+
+    public HostCpuSchedulerSystem getHostCpuSchedulerSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+        return (HostCpuSchedulerSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getCpuScheduler());
+    }
+
+    public CryptoManager getCryptoManager() throws InvalidProperty, RuntimeFault, RemoteException {
+        return new CryptoManager(getServerConnection(), getConfigManager().getCryptoManager());
+    }
+
+    public HostDatastoreSystem getHostDatastoreSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+        return (HostDatastoreSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getDatastoreSystem());
     }
 
     public HostDateTimeSystem getHostDateTimeSystem() throws InvalidProperty, RuntimeFault, RemoteException {
@@ -262,81 +353,25 @@ public class HostSystem extends ManagedEntity {
         return (HostEsxAgentHostManager) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getEsxAgentHostManager());
     }
 
-    public HostCacheConfigurationManager getHostCacheConfigurationManager() throws InvalidProperty, RuntimeFault, RemoteException {
-        return (HostCacheConfigurationManager) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getCacheConfigurationManager());
-    }
-
-    /**
-     * @since 6.0
-     */
-    public HostCertificateManager getHostCertificateManager() throws InvalidProperty, RuntimeFault, RemoteException {
-        return new HostCertificateManager(getServerConnection(), getConfigManager().getCertificateManager());
-    }
-    public HostCpuSchedulerSystem getHostCpuSchedulerSystem() throws InvalidProperty, RuntimeFault, RemoteException {
-        return (HostCpuSchedulerSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getCpuScheduler());
-    }
-
-//    public CryptoManager getCryptoManager() throws InvalidProperty, RuntimeFault, RemoteException {
-//        return new CryptoManager(getServerConnection(), getConfigManager().getCryptoManager());
-//    }
-
-    public HostDatastoreSystem getHostDatastoreSystem() throws InvalidProperty, RuntimeFault, RemoteException {
-        return (HostDatastoreSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getDatastoreSystem());
+    public HostFirewallSystem getHostFirewallSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+        return (HostFirewallSystem) MorUtil.createExactManagedObject(getServerConnection(),
+                getConfigManager().getFirewallSystem());
     }
 
     public HostFirmwareSystem getHostFirmwareSystem() throws InvalidProperty, RuntimeFault, RemoteException {
         return (HostFirmwareSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getFirmwareSystem());
     }
 
-    /**
-     * @since SDK5.5
-     */
     public HostGraphicsManager getHostGraphicsManager() throws InvalidProperty, RuntimeFault, RemoteException {
         return (HostGraphicsManager) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getGraphicsManager());
-    }
-
-    /**
-     * @since SDK4.0
-     */
-    public HostKernelModuleSystem getHostKernelModuleSystem() throws InvalidProperty, RuntimeFault, RemoteException {
-        return (HostKernelModuleSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getKernelModuleSystem());
-    }
-
-    /**
-     * @since SDK4.0
-     */
-    public LicenseManager getLicenseManager() throws InvalidProperty, RuntimeFault, RemoteException {
-        return (LicenseManager) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getLicenseManager());
-    }
-
-    /**
-     * @since SDK4.0
-     */
-    public HostPciPassthruSystem getHostPciPassthruSystem() throws InvalidProperty, RuntimeFault, RemoteException {
-        return (HostPciPassthruSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getPciPassthruSystem());
-    }
-
-    /**
-     * @since SDK4.0
-     */
-    public HostVirtualNicManager getHostVirtualNicManager() throws InvalidProperty, RuntimeFault, RemoteException {
-        return (HostVirtualNicManager) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getVirtualNicManager());
     }
 
     public HostHealthStatusSystem getHealthStatusSystem() throws InvalidProperty, RuntimeFault, RemoteException {
         return (HostHealthStatusSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getHealthStatusSystem());
     }
 
-    /**
-     * @since 6.0
-     */
     public HostAccessManager getHostAccessManager()  throws InvalidProperty, RuntimeFault, RemoteException {
         return new HostAccessManager(getServerConnection(), getConfigManager().getHostAccessManager());
-    }
-
-    public HostFirewallSystem getHostFirewallSystem() throws InvalidProperty, RuntimeFault, RemoteException {
-        return (HostFirewallSystem) MorUtil.createExactManagedObject(getServerConnection(),
-                getConfigManager().getFirewallSystem());
     }
 
     public HostImageConfigManager getHostImageConfigManager() throws InvalidProperty, RuntimeFault, RemoteException {
@@ -344,14 +379,24 @@ public class HostSystem extends ManagedEntity {
                 getConfigManager().getImageConfigManager());
     }
 
+    public IscsiManager getIscsiManager() throws InvalidProperty, RuntimeFault, RemoteException {
+        return (IscsiManager) MorUtil.createExactManagedObject(getServerConnection(),
+                getConfigManager().getIscsiManager());
+    }
+
+    public HostKernelModuleSystem getHostKernelModuleSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+        return (HostKernelModuleSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getKernelModuleSystem());
+    }
+
+    public LicenseManager getLicenseManager() throws InvalidProperty, RuntimeFault, RemoteException {
+        return (LicenseManager) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getLicenseManager());
+    }
+
     public HostMemorySystem getHostMemorySystem() throws InvalidProperty, RuntimeFault, RemoteException {
         return (HostMemorySystem) MorUtil.createExactManagedObject(getServerConnection(),
                 getConfigManager().getMemoryManager());
     }
 
-    /**
-     * @since 6.0
-     */
     public MessageBusProxy getMessageBusProxy() throws InvalidProperty, RuntimeFault, RemoteException {
         return new MessageBusProxy(getServerConnection(), getConfigManager().getMessageBusProxy());
     }
@@ -361,9 +406,21 @@ public class HostSystem extends ManagedEntity {
                 getConfigManager().getNetworkSystem());
     }
 
+    public HostNvdimmSystem getHostNvdimmSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+        return new HostNvdimmSystem(this.getServerConnection(), this.getConfigManager().getNvdimmSystem());
+    }
+
     public HostPatchManager getHostPatchManager() throws InvalidProperty, RuntimeFault, RemoteException {
         return (HostPatchManager) MorUtil.createExactManagedObject(getServerConnection(),
                 getConfigManager().getPatchManager());
+    }
+
+    public HostPciPassthruSystem getHostPciPassthruSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+        return (HostPciPassthruSystem) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getPciPassthruSystem());
+    }
+
+    public HostPowerSystem getHostPowerSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+        return new HostPowerSystem(this.getServerConnection(), this.getConfigManager().getPowerSystem());
     }
 
     public HostServiceSystem getHostServiceSystem() throws InvalidProperty, RuntimeFault, RemoteException {
@@ -381,48 +438,33 @@ public class HostSystem extends ManagedEntity {
                 getConfigManager().getStorageSystem());
     }
 
-    /**
-     * @since 6.0
-     */
     public UserDirectory getUserDirectory() throws InvalidProperty, RuntimeFault, RemoteException {
         return new UserDirectory(getServerConnection(), getConfigManager().getUserDirectory());
     }
 
-    /**
-     * @since SDK5.5
-     */
     public HostVFlashManager getHostVFlashManager() throws InvalidProperty, RuntimeFault, RemoteException {
         return (HostVFlashManager) MorUtil.createExactManagedObject(getServerConnection(),
                 getConfigManager().getVFlashManager());
     }
 
-    public IscsiManager getIscsiManager() throws InvalidProperty, RuntimeFault, RemoteException {
-        return (IscsiManager) MorUtil.createExactManagedObject(getServerConnection(),
-                getConfigManager().getIscsiManager());
+    public HostVirtualNicManager getHostVirtualNicManager() throws InvalidProperty, RuntimeFault, RemoteException {
+        return (HostVirtualNicManager) MorUtil.createExactManagedObject(getServerConnection(), getConfigManager().getVirtualNicManager());
     }
 
-    /**
-     * @deprecated as of SDK 4.0, use getHostVirtualNicManager instead
-     */
-    @Deprecated
+    @Deprecated(since = "4.0")
     public HostVMotionSystem getHostVMotionSystem() throws InvalidProperty, RuntimeFault, RemoteException {
         return (HostVMotionSystem) MorUtil.createExactManagedObject(getServerConnection(),
                 getConfigManager().getVmotionSystem());
     }
 
-    /**
-     * @since SDK5.5
-     */
     public HostVsanInternalSystem getHostVsanInternalSystem() throws InvalidProperty, RuntimeFault, RemoteException {
         return (HostVsanInternalSystem) MorUtil.createExactManagedObject(getServerConnection(),
                 getConfigManager().getVsanInternalSystem());
     }
 
-    /**
-     * @since SDK5.5
-     */
     public HostVsanSystem getHostVsanSystem() throws InvalidProperty, RuntimeFault, RemoteException {
         return (HostVsanSystem) MorUtil.createExactManagedObject(getServerConnection(),
                 getConfigManager().getVsanSystem());
     }
+
 }
